<resources>
    <string name="app_name">alpha</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="bottom_nav_explore">Explore</string>
    <string name="bottom_nav_account">Account</string>
    <string name="step1_title">Decide</string>
    <string name="step2_title">Research</string>
    <string name="step3_title">Plan</string>
    <string name="step4_title">Tests</string>
    <string name="step5_title">CGPA</string>
    <string name="step6_title">LORs</string>
    <string name="step7_title">Projects</string>
    <string name="step8_title">Work Experience</string>
    <string name="step9_title">Publications</string>
    <string name="step10_title">Resume</string>
    <string name="step11_title">Statement of Purpose</string>
    <string name="step12_title">Apply</string>
    <string name="gre_overview">The Graduate Record Examinations, often known as GRE, are conducted by Educational Testing Services (ETS). Broadly categorised, there are two types of GRE - GRE General Test and GRE Subject Tests. The GRE tests are one of the most widely accepted tests across the world.</string>
    <string name="gre_general_learn_more"><u>Learn more about the GRE General Test</u></string>
    <string name="gre_subject_learn_more"><u>Learn more about the GRE Subject Tests</u></string>
    <string name="gre_general_sections_overview">The GRE General Test is a widely accepted test for masters, doctorate and other specialised programs. The test consists of three types of sections.</string>
    <string name="gre_general_awa_title">Analytical Writing Assessment (AWA)</string>
    <string name="gre_general_awa_overview">This section type tests your thinking and analytical skills by requiring you write you an essay based on the instructions provided.</string>
    <string name="gre_general_awa_learn_more"><u>Learn more about AWA-Measure</u></string>
    <string name="gre_general_verbal_title">Verbal Reasoning (V)</string>
    <string name="gre_general_verbal_overview">This section type tests your ability to understand the text, analyse and draw conclusions by requiring you to solve various types of Verbal Reasoning questions.</string>
    <string name="gre_general_verbal_learn_more"><u>Learn more about V-Measure</u></string>
    <string name="gre_general_quant_title">Quantitative Reasoning (Q)</string>
    <string name="gre_general_quant_overview">This section type tests your ability to interpret and analyse quantitative information by requiring you to solve various types of Quantitative Reasoning questions.</string>
    <string name="gre_general_quant_learn_more"><u>Learn more about Q-Measure</u></string>
    <string name="gre_general_awa_details"> - The GRE General Test consists of exactly 1 AWA section.\n\n - The AWA section consists of two essay writing tasks, half an hour each.\n\n - The AWA section always appears at the beginning of the GRE General Test.</string>
    <string name="gre_general_awa_issue_title">Issue Task</string>
    <string name="gre_general_awa_issue_details"> - The Issue Task requires you to write an essay by analysing the given issue.\n\n - You are required to take up a side by agreeing, disagreeing or being neutral, and put forward your points in a logical fashion.\n\n - The task assess your ability to think critically around a given topic and express your thoughts clearly.</string>
    <string name="gre_general_awa_argument_title">Argument Task</string>
    <string name="gre_general_modes_overview">The GRE General Test is available in two modes - computer-delivered and paper-delivered.</string>
    <string name="gre_general_computer_title">Computer-delivered Test</string>
    <string name="gre_general_computer_overview">The computer-delivered test requires you have prerequisite knowledge about operating a basic computer in the testing environment. It comes with additional features compared to the paper-delivered test.</string>
    <string name="gre_general_computer_learn_more"><u>Learn more about computer-delivered test</u></string>
    <string name="gre_general_paper_title">Paper-delivered Test</string>
    <string name="gre_general_paper_overview">The paper-delivered test does not require you to have any prerequisite knowledge, but has its own limitations compared to the computer-delivered test.</string>
    <string name="gre_general_paper_learn_more"><u>Learn more about paper-delivered test</u></string>
    <string name="gre_general_computer_sections_title">Sections</string>
    <string name="gre_general_computer_sections_details">You are required to attempt a total of 6 sections:\n\n - 1 AWA-Measure section (1 hr)\n - 2 V-Measure sections (30 min each)\n - 2 Q-Measure sections (35 min each)\n - 1 Experimental section (30 min or 35 min)</string>
    <string name="gre_general_computer_order_title">Order</string>
    <string name="gre_general_computer_order_details">The order of sections in the test is:\n\n1. AWA-Measure\n2. V-Measure 1 or Q-Measure 1\n3. Q-Measure 1 or V-Measure 1\n --- 10 min break --- \n4. V-Measure 2 or Q-Measure 2\n5. Q-Measure 2 or V-Measure 2\n6. V-Measure 3 or Q-Measure 3</string>
    <string name="gre_general_computer_unidentified_title">Experimental Section</string>
    <string name="gre_general_computer_unidentified_details"> - The experimental section can be a V-Measure section or a Q-Measure section.\n\n - It can appear anywhere in the test after the AWA section.\n\n - There is no way to determine whether a section in the test is experimental. For example, if you get 3 V-Measure sections and 2 Q-Measure sections in the test, it can be inferred that one of those V-Measure sections was experimental. However, there is absolutely no way to determine which one of those sections was experimental.\n\n - The experimental section does not count towards your ultimate score.</string>
    <string name="gre_general_computer_break_title">Breaks</string>
    <string name="gre_general_computer_break_details"> - You get a 1 min break after the end of each section. You are not allowed to leave your desk during this break.\n\n - After the end of the third section, you get a 10 min break. You are allowed to leave your desk during this break.\n\n - All the breaks are optional. One may chose to skip any of the breaks.</string>
    <string name="gre_general_computer_time_title">Total Time</string>
    <string name="gre_general_computer_time_details">The total duration of the computer-delivered test is around 4 hours, depending upon the combination of sections that you get on the test.</string>
    <string name="gre_general_computer_features_title">Features</string>
    <string name="gre_general_computer_features_details">The computer-delivered test provides the following features:\n\n - You can skip a question within a section. However, you cannot skip a section. You have to submit and end a section to proceed with another section.\n\n - You can change or edit your answer for a question at any point of time within a section.\n\n - You can mark a question and review it later at any point of time within a section.\n\n - You can get overall preview of the section at any point of time within a section.\n\n - On-screen calculator is available for Q-Measure sections.</string>
    <string name="gre_general_paper_sections_title">Sections</string>
    <string name="gre_general_paper_sections_details">You are required to attempt a total of 5 sections:\n\n - 1 AWA-Measure section (1 hr)\n - 2 V-Measure sections (35 min each)\n - 2 Q-Measure sections (40 min each)</string>
    <string name="gre_general_paper_order_title">Order</string>
    <string name="gre_general_paper_order_details">The order of sections in the test is:\n\n1. AWA-Measure\n2. V-Measure 1 or Q-Measure 1\n --- 10 min break --- \n3. Q-Measure 1 or V-Measure 1\n4. V-Measure 2 or Q-Measure 2\n5. Q-Measure 2 or V-Measure 2</string>
    <string name="gre_general_paper_unidentified_title">Experimental Section</string>
    <string name="gre_general_paper_unidentified_details"> - The paper-delivered test does not come with an experimental section.\n\n - All the sections in the test contribute towards your ultimate score.</string>
    <string name="gre_general_paper_break_title">Breaks</string>
    <string name="gre_general_paper_break_details"> - You get a 1 min break after the end of each section. You are not allowed to leave your desk during this break.\n\n - After the end of the second section, you get a 10 min break. You are allowed to leave your desk during this break.\n\n - All the breaks are optional. One may chose to skip any of the breaks.</string>
    <string name="gre_general_paper_time_title">Total Time</string>
    <string name="gre_general_paper_time_details">The total duration of the paper-delivered test is around 3 hrs 30 min.</string>
    <string name="gre_general_paper_features_title">Features</string>
    <string name="gre_general_paper_features_details">The paper-delivered test provides the following features:\n\n - Answers are to be entered directly in the test book. You are not required to write answers on a separate answer sheet.\n\n - You will be provided with a calculator for Q-Measure sections. You are not allowed to use your own calculator.</string>
    <string name="step4_intro">After boiling down it all to a list of universities and programs, it is time for you to appear for tests. Yes, exam time! This process, again, has to be done properly.</string>
    <string name="step4_heading1">Know your tests</string>
    <string name="step4_body1">In the planning stage where you ended up with a list of universities and programs, you researched and browsed their details. One of them was the requirements for application to each program. If you have not done that yet, this is the time to visit the websites of your shortlisted programs and make a note of their corresponding application requirements. For this step, you must know the exams or tests required by each program. Further, you must know what each test is all about. Grab some details in terms of the syllabus, exam pattern, mode of exam and preparation time required.</string>
    <string name="step4_heading2">Register</string>
    <string name="step4_body2">Once you have got hold of every information about the tests that you must take, it is always recommended that you register yourself for these tests. You must draft a proper timeline with respect to what you are currently doing and your schedule in order to estimate the time you will need to prepare for these tests. Once you have the test dates with you, you have some pressure to seriously study and prepare in time. This is the prominent reason why you are advised to register for the tests before beginning with the preparation. However, do remember to keep a enough time gap for preparation while selecting your test dates.</string>
    <string name="step4_heading3">Prepare</string>
    <string name="step4_body3">If you have been following the above mentioned steps, that means that you have your test dates with you. Do not waste your time now. Start preparing for your tests. Practice a lot. Take coaching, only if you feel so. Each test requires a distinct kind of preparation, ranging from the syllabus to the time needed for preparation.</string>
    <string name="step4_heading4">Score well</string>
    <string name="step4_body4">As the test date approaches, you might get anxious. It is absolutely okay. Do not get stressed too much. Give your best while you appear for the tests and try to score well. In case you feel that you have not scored in line with your expectations, most tests provide you with the option to retake the test after a certain number of days.</string>
</resources>