<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_layout"
    android:orientation="vertical"
    tools:context=".GREGeneralComputerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_sections_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_sections_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_sections_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_sections_details"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_order_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_order_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_order_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_order_details"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_unidentified_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_unidentified_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_unidentified_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_unidentified_details"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_break_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_break_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_break_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_break_details"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_time_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_time_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_time_details"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_features_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_features_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_features_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_features_details"/>


        </LinearLayout>



    </LinearLayout>



</ScrollView>