<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/background_layout"
    tools:context=".Step4Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/step4_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/nexa_light"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/step4_intro"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/step4_heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_heading1"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/step4_body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_body1"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/step4_heading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_heading2"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/step4_body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_body2"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/step4_heading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_heading3"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/step4_body3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_body3"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/step4_heading4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_heading4"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/step4_body4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/step4_body4"/>



        </LinearLayout>

        <Button
            android:id="@+id/button_step4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:fontFamily="@font/nexa_bold" />


    </LinearLayout>

</ScrollView>