<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_layout"
    android:orientation="vertical"
    tools:context=".GREGeneralModesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:id="@+id/gre_general_modes_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/nexa_light"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/gre_general_modes_overview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_computer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_title"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_computer_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_computer_overview"/>

            <TextView
                android:id="@+id/gre_general_computer_learn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_bold"
                android:layout_marginTop="10dp"
                android:text="@string/gre_general_computer_learn_more"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/gre_general_paper_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/nexa_light"
                android:layout_marginBottom="10dp"
                android:text="@string/gre_general_paper_title"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/gre_general_paper_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_light"
                android:text="@string/gre_general_paper_overview"/>

            <TextView
                android:id="@+id/gre_general_paper_learn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="@font/nexa_bold"
                android:layout_marginTop="10dp"
                android:text="@string/gre_general_paper_learn_more"/>

        </LinearLayout>




    </LinearLayout>

</ScrollView>